<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/_5sdp"
    android:layout_marginVertical="@dimen/_5sdp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivtopback"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_icon_ionic_ios_arrow_round_back" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/_40sdp">

        <LinearLayout
            android:visibility="invisible"
            android:id="@+id/llEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:background="@drawable/button"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:drawableLeft="@drawable/email"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:text="  Login with Email"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:visibility="invisible"
            android:id="@+id/llView"
            android:layout_marginVertical="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llEmail"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/_120sdp"
                android:layout_height="2dp"
                android:background="#37000000"
                android:padding="2dp" />

            <TextView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:text="or"
                android:textSize="15sp"
                android:textColor="#787878"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_120sdp"
                android:layout_height="2dp"
                android:background="#37000000"
                android:padding="2dp" />
        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/tvLoginMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/llView"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/loginmobilenumber"
            android:textColor="#02426E"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_marginVertical="@dimen/_20sdp"
            android:id="@+id/llCreadentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLoginMobileNumber"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter Your EmailID/Mobile Number"
                android:textSize="14sp"
                android:textColor="#787878"
                android:paddingVertical="@dimen/_5sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmailMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"

                android:textColorHint="#BDBDBD"
                android:textSize="14sp"
                android:hint="Enter Your EmailID/Mobile Number"
                 />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llForgetSendOTP"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_below="@+id/llCreadentials"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:background="@drawable/button"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text=" Send OTP"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
        <TextView
            android:visibility="invisible"
            android:id="@+id/tvForget"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@+id/llForgetSendOTP"

            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:gravity="right"
            android:paddingRight="@dimen/_40sdp"
            android:text="Forget PassWord ?"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
        <TextView
            android:visibility="invisible"
            android:id="@+id/tvLoginWithPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/tvForget"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/password"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvterms"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/tvLoginWithPassword"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/textbelow"
            android:autoLink="web"
            android:clickable="true"
            android:textSize="@dimen/_14sdp" />
        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/tvterms"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/pp"
            android:autoLink="web"
            android:clickable="true"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:visibility="invisible"
            android:id="@+id/tvSignin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_4sdp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/open_sans_semibold"
            android:padding="@dimen/_5sdp"
            android:text="@string/member"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>

</LinearLayout>