<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="@dimen/_5sdp"
    android:layout_marginVertical="@dimen/_5sdp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivtopback"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_icon_ionic_ios_arrow_round_back" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/llEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:background="@drawable/button"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:drawableLeft="@drawable/ic_phone_call__1_"
                android:gravity="center"
                android:fontFamily="@font/open_sans"
                android:text="  Login using Mobile Number"
                android:textColor="@color/white"
                android:textSize="18sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llView"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llEmail"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/_120sdp"
                android:layout_height="2dp"
                android:background="#37000000"
                android:padding="2dp" />

            <TextView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:text="or"
                android:textSize="15sp"
                android:fontFamily="@font/open_sans_light"
                android:textColor="#787878"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/_120sdp"
                android:layout_height="2dp"
                android:background="#37000000"
                android:padding="2dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvLoginMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/llView"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/loginEmail"
            android:textColor="#02426E"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_marginVertical="@dimen/_20sdp"
            android:id="@+id/llCreadentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLoginMobileNumber"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email ID"
                android:fontFamily="@font/open_sans_bold"
                android:textColor="#787878"
                android:paddingVertical="@dimen/_5sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmailID"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/editborder"
                android:textColorHint="@color/textgrey"

                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_light"
                android:textSize="14sp"
                android:hint="Enter your Email ID" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="#787878"
                android:fontFamily="@font/open_sans_bold"
                android:paddingVertical="@dimen/_5sdp"
                android:textStyle="bold" />



            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"

                android:background="@drawable/editborder"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_toLeftOf="@+id/eye2"
                    android:background="@null"
                    android:hint="Enter your Password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_5sdp"
                    android:textColorHint="@color/textgrey"
                    android:textSize="@dimen/_13sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--
                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"

                            android:textSize="14sp"
                            android:textColorHint="#BDBDBD"
                            android:fontFamily="@font/poppins_light"
                            android:hint="Enter your Password" />-->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSendOTP"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_below="@+id/llCreadentials"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:background="@drawable/button"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:text=" Submit Now"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/open_sans"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView

            android:id="@+id/tvForget"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@+id/llSendOTP"

            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:gravity="right"
            android:paddingRight="@dimen/_40sdp"
            android:text="Forget Password  ?"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tvOTP"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/tvForget"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/OTP"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tvterms"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/tvOTP"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/textbelow"
            android:autoLink="web"
            android:clickable="true"
            android:textSize="@dimen/_14sdp" />
        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/tvterms"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/pp"
            android:autoLink="web"
            android:clickable="true"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tvsignup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_4sdp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#80000000"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            />
    </RelativeLayout>

</LinearLayout>